--- a/src/components/Content/index.module.css
+++ b/src/components/Content/index.module.css
@@ -15,3 +15,30 @@
 :global(.ant-input-number) {
     width: 160px;
 }
+
+.title {  
+  font-weight: 600;
+}
+
+.btnWrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.review {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.reviewTitle {
+  width: 200px;
+  font-weight: 600;
+}
+
+.reviewItem {
+  margin-bottom: 12px;
+}
